Fix: Related content on mobile

--- a/src/pages/picture/Picture.scss
+++ b/src/pages/picture/Picture.scss
@@ -2,6 +2,7 @@
     display: grid;
     place-items: center;
 
+    padding: 10px;
     gap: 10px;
 
     overflow-y: auto;
