--- a/src/pages/picture/components/mainCard/style/MainCard.scss
+++ b/src/pages/picture/components/mainCard/style/MainCard.scss
@@ -3,12 +3,10 @@
 
     width: 100%;
     min-width: 250px;
-    max-width: 400px;
+    max-width: 425px;
 
     border: 1px solid #aaa;
-    border-top: 0;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-radius: 10px;
 
     background: #fff;
 
